--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -97,11 +97,11 @@ povezavo med enim in drugim pristopom obravnave le te.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Osnovni pojmi} \label
+\subsection{Osnovni pojmi} \label{ss:osnovni_pojmi}
 Za začetek ponovimo nekaj osnovnih definicij in oznak iz teorije grafov, ki jih bomo potrebovali 
 za razumevanje tega diplomskega seminarja. 
 
-\begin{definicija}
+\begin{definicija} \label{def:graf}
     Graf $G$ je urejen par $(V(G), E(G)),$ kjer je $V(G)$ množica vozlišč in $E(G)$ 
     podmnožica v $\binom{V(G)}{2},$ ki vsebuje povezave grafa.
 \end{definicija}
@@ -112,7 +112,7 @@ s seboj, pravimo, da je graf enostaven. Vozlišči $v, u \in G$ sta sosedni, če
 Sosednost je ekvivalenčna relacija, zato sosedni vozlišči označimo $u \sim v.$ Če $w, x \in V(G)$ 
 nista sosedni pa pišemo $w \not \sim x.$
 
-\begin{definicija}
+\begin{definicija} \label{def:komplement}
     Komplement grafa $G$, je graf $\overline{G},$ za katerega velja $V(G) = V(\overline{G})$ in 
     $$\forall u,v \in V(\overline{G}): uv E(\overline{G}) \Leftrightarrow uv \not \in E(G).$$
 \end{definicija}
@@ -122,42 +122,42 @@ $\forall i : v_i, v_{i+1} \in E(G).$ Sprehod je enostaven, če vsebuje sama razl
 Graf je povezan, če med vsakima dvema različnima vozliščema obstaja sprehod. Na povezanem
 grafu lahko definiramo razdaljo med vozliščema.
 
-\begin{definicija}
+\begin{definicija} \label{def:razdalja}
     Razdalja med dvema vozliščema $u, v \in V(G)$ je dolžina najkrajšega sprehoda in jo 
     označujemo z $d(u, v).$ 
 \end{definicija}
 
 Naslednja trditev o razdaji med vozlišči je očitna.
 
-\begin{trditev} \label{nicelna_razdalja}
+\begin{trditev} \label{trd:nicelna_razdalja}
     Za povezan graf $G$ in poljubni vozlišči $v, w \in V(G)$ velja:
     $$ d(v, w) = 0 \Leftrightarrow v=w.$$
 \end{trditev} 
 
-\begin{definicija}
+\begin{definicija} \label{def:podgraf}
     Graf $H$ je podgraf grafa $G$ natanko tedaj, ko velja $V(H) \subseteq V(G)$ in 
     $E(H) \subseteq E(H)$.
 \end{definicija}
 
-\begin{definicija}
+\begin{definicija} \label{def:induciran_podgraf}
     Graf $H$ je induciran podgraf grafa $G$ natanko tedaj, ko velja 
     $\forall u, v \in V(H) : uv \in E(G) \Rightarrow E(H)$.
 \end{definicija}
 
-\begin{definicija}
+\begin{definicija} \label{def:komponenta}
 Komponenta grafa je povezan podgraf, ki ni del nobenega večjega povezanega podgrafa. 
 \end{definicija}
 
 Povezan graf ima seveda samo eno komponento. Definirajmo še operacijo združitve grafov.
 
-\begin{definicija}
-    Združitev grafov $G$ in $H$, je graf $G + H$, za katerega velja $V(G + H) = V(G) \cup V(H)$ 
+\begin{definicija} \label{def:vsota}
+    Vsota grafov $G$ in $H$, je graf $G + H$, za katerega velja $V(G + H) = V(G) \cup V(H)$ 
     in $E(G + H)  = E(G) \cup E(H) \cup \{ uv \;  | \;  u \in V(G) \land v \in V(H) \}.$
 \end{definicija}
-% ali je ta definicija ok? In prevod... ne najdem sploh definicije za joint graphs ali bi bilo boljše vsota?.
+%je to ime vredu? v angleščini je joint graphs...
 
 Poglejmo še nekaj primerov osnovnih razredov grafov:
-\begin{itemize}
+\begin{itemize} \label{primeri_grafov}
     \item Prazen graf na $n$ vozliščih, ki ga označujemo z $N_n$, nima nobenih povezav. 
     \item Polni graf na $n$ vozliščih, ki ga označujemo z $K_n$, ima vse možne povezave.
     \item Polni dvodelni graf, ki ga označujemo z $K_{n, m}$ ima množico 
@@ -186,7 +186,7 @@ Poglejmo še nekaj primerov osnovnih razredov grafov:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\section{Metrična dimenzija grafa}
+\section{Metrična dimenzija grafa} \label{s:metricna_dim_grafa}
 
 %motivacija neki izvirnega
 TODO - motivacija
@@ -195,39 +195,40 @@ TODO - motivacija
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Definicija}
+\subsection{Definicija} \label{ss:definicija_metricne_dim_grafa}
 
 Metrična dimenzija grafa je najmanjše število vozlišč grafa, ki jih potrebujemo, da
 vsa vozlišča v grafu razlikujemo med sabo zgolj s pomočjo razdalj do izbranih vozlišč.
 V matematičnem jeziku to povemo takole:
 
-\begin{definicija} \label{def:1}
+\begin{definicija} \label{def:metricna_predstavitev}
     Naj bo $G$ povezan graf in $W = \{ w_1, ... , w_k  \} \subseteq V(G)$ neprazna 
     podmnožica vozlišč. Vektor $r_W(v) = (d(v, w_1), ..., d(v, w_k))$ imenujemo metrična 
     predstavitev vozlišča $v \in V(G)$ s podmnožico $W$.
 \end{definicija}
 
-\begin{definicija} \label{def:2}
-    Neprazna podmnožica $R \subset V(G)$ je rešljiva,
+\begin{definicija} \label{def:resljiva_mn}
+    Neprazna podmnožica $R \subseteq V(G)$ je rešljiva,
     če $\forall u, v \in V(G): u \neq v \implies r_R(v) \neq r_R(u)$.
 \end{definicija}
 
-\begin{definicija} \label{def:3}
-    Najmanjša rešljiva množica grafa $G$ se imenuje rešljiva baza. Njeno velikost imenujemo 
+\begin{definicija} \label{def:baza_dimenzija}
+    Najmanjša rešljiva množica grafa $G$ se imenuje metrična baza. Njeno velikost imenujemo 
     metrična dimenzija in jo označimo z $\beta(G).$ 
 \end{definicija}
 
 Poglejmo si nekaj lahkih osnovnih primerov.
 
 
-\begin{primer} \label{primer_2.4.}
+\begin{primer} \label{pr:mdim_pot}
 Označimo vozlišča poti z $v_1, v_2, ..., v_n$, kot je prikazano na spodnji sliki \ref{fig:pot}. 
-Izberimo podmnožico $W = {v_1} \subseteq V(G).$ Metrične predstavitve vozlišč grafa $P_n$, 
-glede na izbrano podmnožico vozlišč, so potem sledeče:
+Izberimo podmnožico $W = \{v_1\} \subseteq V(G).$ Metrične predstavitve vozlišč grafa $P_n$, 
+glede na $W$, so potem sledeče:
 \begin{align*}
     r_W(v_1) = d(v_1, v_1) & = 0 \\
     r_W(v_2) = d(v_2, v_1) & = 1 \\
     & \dots \\
+    r_W(v_{n-1}) = d(v_{n-1}, v_1) & = n-2 \\
     r_W(v_n) = d(v_n, v_1) & = n-1.
 \end{align*}
 
@@ -245,22 +246,20 @@ vozlišč, je torej metrična dimenzija grafa poti poljubne dolžine enaka $\bet
 \end{primer}
 
 
-\begin{primer}\label{primer_2.5.}
+\begin{primer}\label{pr:mdim_cikel}
     Označimo vozlišča cikla z $v_1, v_2, ..., v_n$, kot je prikazano na sliki \ref{fig:cikel}. 
     Izberimo podmnožico $W = {v_1, v_2} \subseteq V(G).$ Metrične predstavitve vozlišč grafa $C_n$, 
-    glede na izbrano podmnožico vozlišč, so potem sledeče:
+    glede na $W$, so potem sledeče:
     \begin{align*}
         r_W(v_1) = (d(v_1, v_1), d(v_1, v_2)) & = (0, 1) \\
         r_W(v_2) = (d(v_2, v_1), d(v_2, v_2)) & = (1, 0) \\
-        r_W(v_3) = (d(v_3, v_1), d(v_3, v_2)) & = (2, 1) \\
-        r_W(v_4) = (d(v_4, v_1), d(v_4, v_2)) & = (3, 2) \\
         & \dots \\
         r_W(v_{n-1}) = (d(v_{n-1}, v_1), d(v_{n-1}, v_2)) & = (2, 3) \\
         r_W(v_n) = (d(v_n, v_1), d(v_n, v_2)) & = (1, 2)
     \end{align*}
     
     Zopet vidimo, da so metrične predstavitve vseh vozlišč med seboj različne. Če bi vzeli 
-    množico $W \setminus \{v_i\}$, bi imeli po dve vozlišči enako metrično prestavitev.
+    množico z samo enim vozliščem, bi imeli po dve vozlišči enako metrično prestavitev.
     $W$  je torej najmanjša rešljiva množica, njena velikost pa je enaka $2$. Metrična 
     dimenzija poljubno velikega cikla je enaka $\beta(C_n) = 2.$
 
@@ -273,11 +272,10 @@ vozlišč, je torej metrična dimenzija grafa poti poljubne dolžine enaka $\bet
 
 \end{primer}
 
-\begin{primer}\label{primer_2.6.}
+\begin{primer}\label{pr:dim_poln}
     Označimo vozlišča polnega grafa z $v_1, v_2, ..., v_n$, kot je prikazano na sliki \ref{fig:polni}. 
     Izberimo podmnožico $W = {v_1, v_2, ... , v_{n-1}} \subseteq V(G).$ 
-    Metrične predstavitve vozlišč grafa $K_n$, glede na izbrano podmnožico vozlišč, so potem 
-    sledeče:
+    Metrične predstavitve vozlišč grafa $K_n$, glede na $W$, so potem sledeče:
     \begin{align*}
         r_W(v_1) = (d(v_1, v_1), d(v_1, v_2), ... , d(v_1, v_{n-1})) & = (0, 1, ... , 1) \\
         r_W(v_2) = (d(v_2, v_1), d(v_2, v_2), ... , d(v_2, v_{n-1})) & = (1, 0, ... , 1) \\
@@ -287,10 +285,11 @@ vozlišč, je torej metrična dimenzija grafa poti poljubne dolžine enaka $\bet
     \end{align*}
     
     Zopet vidimo, da so metrične predstavitve vseh vozlišč med seboj različne. Vsako 
-    vozlišče ima na $i$ - ti komponenti $0$ in povsod drugje $1$, z izjemo vozlišča $v_n$, 
-    ki ima povsod $1$. Če bi vzeli poljubno $W \setminus \{v_i\}$, bi imeli vozlišči $v_i$ 
-    in $v_n$ enaki metrični predstavitvi. $W$  je torej najmanjša rešljiva množica, njena 
-    velikost pa je enaka $n-1$. Metrična dimenzija poljubno velikega cikla je enaka $\beta(K_n) = n-1.$
+    vozlišče ima na $i$ - ti komponenti metrične predstavitve $0$ in povsod drugje $1$, 
+    z izjemo vozlišča $v_n$, ki ima povsod $1$. Če bi iz $W$ izvzeli poljubno vozlišče $v_i$, 
+    bi imeli vozlišči $v_i$ in $v_n$ enaki metrični predstavitvi. $W$  je torej najmanjša rešljiva množica, 
+    njena velikost pa je enaka $n-1$. Metrična dimenzija poljubno velikega polnega grafa je enaka 
+    $\beta(K_n) = n-1.$
 
     \begin{figure}[h]
         \caption{Graf $K_5$.}
@@ -306,64 +305,47 @@ vozlišč, je torej metrična dimenzija grafa poti poljubne dolžine enaka $\bet
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Lastnosti}
+\subsection{Lastnosti} \label{s:lastnosti_mdim}
 
 Nekaj osnovnih ugotovitev o rešljivih množicah grafa lahko razberemo iz zgornjih primerov.
 
-\begin{trditev} \label{trditev_2.8.}
-Za povezan graf $G$, je $V(G)$ rešljiva množica.
+\begin{trditev} \label{trd:cela_resljiva}
+Za povezan graf $G$, je $V(G)$ rešljiva množica. Še več, za poljubno vozlišče $v_i \in V(G)$
+je $W_i = V(G) \setminus \{ v_i\}$ rešljiva množica.
 \end{trditev}
 
 \begin{dokaz}
-Predpostavimo $|V(G)|= n$. Označimo vozlišča z $v_1, ..., v_n$.
-Za posamezno vozlišče bo metrična predstavitev sledeča:
-$$r_{V(G)}(v_k) = (d(v_k, v_1), ..., d(v_k, v_k), ... , d(v_k, v_n)) = (d(v_k, v_1), ..., 0 , ... , d(v_k, v_n)).$$
-Torej za vsako vozlišče $v_k$ bo $k$-ta komponenta metrične predstavitve enaka $0$. 
-Zaradi \ref{nicelna_razdalja} je to tudi edina komponenta v vektorju, ki bo enaka $0$.
-Sledi $\forall u, v \in V(G): u \neq v \Rightarrow r_{V(G)}(v) \neq r_{V(G)}(u)$, 
-torej je $V(G)$ rešljiva množica.
+Naj bo $G$ povezan in $|V(G)|= n$. Označimo vozlišča z $v_1, ..., v_n$.
+Upoštevajoč trditev \ref{trd:nicelna_razdalja} hitro opazimo, 
+$\forall j \neq i:$ vozlišče $v_j$ imelo natanko $j$-to komponento metrične predstavitve 
+glede na $W_i$ enako $0$. Vozlišče $v_i$ pa bo imelo vse komponente različne od $0.$
+Sledi $\forall u, v \in V(G): u \neq v \Rightarrow r_{W_i}(v) \neq r_{W_i}(u)$, 
+torej je $W_i$ rešljiva množica.
+Ker je $V(G) = W_i \cup \{ v_i\},$ je tudi $V(G)$ rešljiva.
 \end{dokaz}
 
-% a je sploh definirana razdalja na nepovezanem grafu?? s bi se dalo narest kakšno smiselno razširitev??
-%iz te trditve sledi, da metrična dimenzija vselej obstaja in je manjša ali enaka |V(G)|.
 
-\begin{trditev}
-    Rešljiva baza povezanega grafa $G$ ni enolično določena.
-\end{trditev}
-\begin{dokaz}
-    To hitro vidimo na primeru \ref{primer_2.4.}.
-    Za $W$ bi lahko vezli tudi vozlišče $v_n$ in prišli do enakega rezultata.
-\end{dokaz}
-
-V defnicijah \ref{def:1} in \ref{def:2} smo prepostavili, da imamo neprazno podmnožico 
-vozlišč. Če bi vzeli prazno množico, bi bila definicija metrične dimenzije nesmiselna. 
-Iz trditve \ref{trditev_2.8.} lahko potem sklepamo, da metrična dimenzija za graf vselej 
-obstaja in lahko zapišemo naslednjo posledico:
-
-\begin{posledica}
+\begin{posledica} \label{po:groba_omejitev_mdim}
     Za povezan graf $G$ velja 
     $$1 \leq \beta(G) \leq |V(G)| - 1. $$
 \end{posledica}
-\begin{dokaz}
-    Iz definicije \ref{def:3} sledi $1 \leq \beta(G)$. Iz trditve \ref{trditev_2.8.} 
-    pa sledi $\beta(G) \leq |V(G)|.$ Predpostavimo $|V(G)| = n$ in $V(G) = \{ v_1, ... , v_n\}$. 
-    Vzemimo sedaj podmnožico $W = \{ v_1, ... , v_{n-1}\}.$
-    Metrične predstavitve vozlišč glede na $W$ so sledeče:
 
-    \begin{align*}
-        r_W(v_1) & = (0, d(v_1, v_2), ..., d(v_1, v_k), ... , d(v_1, v_{n-1})) \\
-        r_W(v_2) & = (d(v_2, v_1), 0, ..., d(v_2, v_k), ... , d(v_2, v_{n-1})) \\
-        & \dots \\
-        r_W(v_k) & = (d(v_k, v_1), d(v_k, v_2), ..., 0 , ... , d(v_k, v_{n-1})) \\
-        & \dots \\
-        r_W(v_{n-1}) & = (d(v_{n-1}, v_1), d(v_{n-1}, v_2), ... , d(v_{n-1}, v_k) , ..., 0) \\
-        r_W(v_n) & = (d(v_n, v_1), d(v_n, v_2), ...,  d(v_n, v_k), ... , d(v_n, v_{n-1})) \\
-    \end{align*}
-    Vidimo, da so vse metrične predstavitve med seboj različne, torej je $W$ rešljiva in 
-    $\beta(G) \leq n - 1.$ 
+
+\begin{trditev} \label{trd:enolicnost_baze}
+    Metrična baza povezanega grafa $G$ ni nujno enolično določena.
+\end{trditev}
+
+\begin{dokaz}
+    To hitro vidimo na primeru \ref{pr:mdim_pot}. Za $W$ bi lahko vezli tudi vozlišče 
+    $v_n$ in prišli do enakega rezultata.
 \end{dokaz}
 
-\begin{trditev} \label{trditev_2.10.}
+
+% V defnicijah \ref{def:metricna_predstavitev} in \ref{def:resljiva_mn} smo prepostavili, da imamo 
+% neprazno podmnožico vozlišč. Če bi vzeli prazno množico, bi bila definicija metrične dimenzije nesmiselna. 
+
+
+\begin{trditev} \label{trd:mdim_polni_pot}
     Naj bo $G$ povezan graf in $|V(G)| = n \geq 2.$ Potem velja:
     \begin{enumerate}
         \item $G = K_n \; \Leftrightarrow \; \beta(G) = n - 1.$
@@ -372,8 +354,8 @@ obstaja in lahko zapišemo naslednjo posledico:
 \end{trditev}
 
 \begin{dokaz}
-    Implikacijo v desno stran za obe točki smo že pokazali v primerih \ref{primer_2.4.} in 
-    \ref{primer_2.6.}.
+    Implikacijo v desno stran za obe točki smo že pokazali v primerih \ref{pr:mdim_pot} in 
+    \ref{pr:dim_poln}.
     \begin{enumerate}
         \item $\Leftarrow$  TODO
         \item $\Leftarrow$
@@ -390,11 +372,20 @@ obstaja in lahko zapišemo naslednjo posledico:
     \end{enumerate}
 \end{dokaz}
 
-%Konec koncev je vsega konec.%
-%Začetki so najtežji.%
-\begin{opomba} \label{opomba_2.11.}
+
+\begin{trditev}
+    Naj bo $n\geq 1$, potem velja:
+    \begin{enumerate}
+        \item $n \not \in \{ 3, 6\} \; \Rightarrow \; \beta(C_n + K_1) = 
+        \Bigl \lfloor \frac{2n + 2}{5}\Bigr \rfloor$
+        \item $n \not \in \{ 1, 2, 3, 6\} \; \Rightarrow \; \beta(P_n + K_1) = 
+        \Bigl \lfloor \frac{2n + 2}{5}\Bigr \rfloor$
+    \end{enumerate}
+\end{trditev}
+
+\begin{opomba} \label{op:zadostno_preverjanje}
 Če za neko množico $S \subseteq V(G)$ preverjamo, če je rešljiva je dovolj preveriti metrične 
-predstavitve vozlišč $v \in V(G) \setminus S.$ Vozlišča iz $S$ bodo imela po eno komponento 
+predstavitve vozlišč $v \in V(G) \setminus S.$ Vozlišča iz $S$ bodo imela natanko eno komponento 
 vektorja enako nič. 
 \end{opomba}
 
@@ -403,12 +394,12 @@ vektorja enako nič.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsubsection{Metrična dimenzija in premer grafa}
+\subsubsection{Metrična dimenzija in premer grafa} \label{ss:mdim_premer}
 
 Ni presenetljivo, da lahko najdemo povezavo med metrično dimenzijo in premerom grafa.
 Spomnimo se matematične definicije premera.
 
-\begin{definicija}
+\begin{definicija} \label{def:premer}
     Premer grafa $G$ označujemo z ${\rm diam}(G)$ in je enak dolžini najdaljše najkrajše 
     poti v grafu. Torej $${\rm diam}(G) = \underset{v, u \in V(G)}{\max} d(u, v).$$
 \end{definicija}
@@ -416,7 +407,7 @@ Spomnimo se matematične definicije premera.
 Iz definicije očitno sledi, da za poljubni dve vozlišči iz povezanega grafa $u, v \in V(G)$
 velja $0 \leq d_G (u, v) \leq {\rm diam}(G).$
 
-\begin{trditev}
+\begin{trditev}\label{trd:groba_meja_mdim_premer}
     Naj bo $G$ povezan graf in $|V(G)| = n$. Potem velja naslednja povezava:
     $$n \leq ({\rm diam}(G))^{\beta (G)} + \beta (G). $$
 \end{trditev}
@@ -436,7 +427,7 @@ velja $0 \leq d_G (u, v) \leq {\rm diam}(G).$
 
 V resnici lahko red grafa z dano metrično dimenzijo in premerom še bolj omejimo.
 
-\begin{trditev}
+\begin{trditev} \label{trd:meja_mdim_premer}
     Naj bo $G$ povezan graf in $|V(G)| = n$. Označimo $ \delta = {\rm diam}(G)$ in 
     $\beta = \beta (G)$. Potem velja
 
@@ -456,22 +447,26 @@ tega ne bomo obravnavali tako podrobno.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsubsection{Dvojčki in metrična dimenzija}
+\subsubsection{Dvojčki in metrična dimenzija} \label{ss:dvojcki_mdim}
 Spomnimo se pojma soseščine vozlišča.
 
-\begin{definicija}
+\begin{definicija} \label{def:sosescina}
     Naj bo $G$ povezan graf in $v \in V(G)$ vozlišče na grafu. Množico 
     $$N(v) = \{u \in V(G) \, | \,vu \in E(G) \}$$ imenujemo soseščina vozlišča $v$.
 \end{definicija}
 
+
 Sedaj vpeljimo ekvivalenčno relacijo na vozliščih
-$$v \equiv u \Leftrightarrow N(v)\setminus \{u\} = N(u) \setminus \{v\}$$
+\begin{equation}\label{eq:dvojcki}
+v \equiv u \Leftrightarrow N(v)\setminus \{u\} = N(u) \setminus \{v\}
+\end{equation}
 Če sta vozlišči v tej ekvivalenčni relaciji, pravimo, da sta dvojčka. 
 Ekvivalenčni razred vozlišča $v$ označimo z $v^{*}$, 
 množico vseh ekvivalenčnih razredov z $\tau (G)$, število vseh razredov pa naj bo označeno 
 z $|\tau(G)| = \iota(G).$
 
-\begin{lema}
+
+\begin{lema} \label{lema:dvojcki_razdalje}
     Naj bosta $u, v \in v(G)$ dvojčka. Potem je 
     $$\forall w \in V(G) \setminus \{u, v\} : d(u, w) = d(v, w).$$
 \end{lema}
@@ -496,7 +491,7 @@ z $|\tau(G)| = \iota(G).$
 Iz tega sledi, da mora vsaka rešljiva množica vsebovati vsaj enega od dvojčkov.
 Zapišemo lahko naslednjo trditev:
 
-\begin{trditev}
+\begin{trditev} \label{trd:meja_mdim_dvojcki}
     Za povezan graf $G$ velja
     $$\beta(G) \geq \sum_{v^{*} \in \tau(G)} (|v^{*}| - 1).$$
 \end{trditev}
@@ -515,11 +510,10 @@ TODO
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\section{Leksikografski produkt grafov}
+\section{Leksikografski produkt grafov}\label{s:leks_prod}
 
 
-
-\begin{definicija}
+\begin{definicija} \label{def:leks_prod}
     Leksikografski produkt $G[H]$ grafov $G$ in $H$ je definiran na množici vozlišč 
     $V (G[H]) = V (G)\times V (H)$. Dve različni vozlišči $(u, v)$ in $(x, y)$ sta 
     sosedni, kadar velja
@@ -534,7 +528,7 @@ TODO
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{primer}
+\subsection{primer} 
 Za lažjo predstavo si lahko ogledamo sliko \ref{fig:produkt}, ki prikazuje leksikografski produkt
 dveh naključnih povzeanih grafov.
 
@@ -550,7 +544,7 @@ dveh naključnih povzeanih grafov.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{lastnosti}
+\subsection{lastnosti} \label{ss:lastnosti_leks_prod}
 Nekaj osnovnih lastnosti leksikografskega produkta grafov:
 \begin{itemize}
     \item RED: $|V(G)| = n$ in $|V(H)| = m \; \Rightarrow |V(G[H])| = n \cdot m.$
@@ -568,23 +562,25 @@ Nekaj osnovnih lastnosti leksikografskega produkta grafov:
 
 Poglejmo si kako izgleda razdalja med vozliščema v leksikografskem prodkutu grafov. 
 Označimo preslikavo  $a: V(G) \times V(G) \rightarrow \mathbb{N};$   
-$$ a(v, w) = \begin{cases}
-    0; & v = w \\
-    1; & v \sim w \\
-    2; & v \not\sim w
-\end{cases} 
-$$ 
+\begin{equation} \label{eq:fja_a} 
+    a(v, w) = 
+    \begin{cases}
+        0; & v = w \\
+        1; & v \sim w \\
+        2; & v \not\sim w
+    \end{cases} 
+\end{equation} 
 Opazujemo Leksikografski produkt povezanega grafa $G$ reda $n$, z množico vozlišč
 $V(G) = \{v_1, v_2, ... , v_n \}$ in grafa $H$ reda $m$, z množico vozlišč 
 $V(H) = \{u_1, u_2, ... , u_m \}$. Zaradi boljše preglednosti vpeljimo oznako 
 $v_{ij} := (v_i, u_j) \in V(G[H]).$
 Sedaj lahko zapišemo
 \begin{equation} \label{eq:razdalja_produkta}
-    d_{G[H]}(v_{ij}, v_{rs}) = \begin{cases}
+    d_{G[H]}(v_{ij}, v_{rs}) = 
+    \begin{cases}
         d_G(v_i, v_r); & v_i \neq v_r \\
         a_H(u_j, u_s); & \text{sicer}
     \end{cases}
-
 \end{equation} 
 
 
@@ -594,14 +590,15 @@ Sedaj lahko zapišemo
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\section{Metrična dimenzija leksikografskega produkta grafov}
+\section{Metrična dimenzija leksikografskega produkta grafov}\label{s:mdim_prod}
  
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Metrična dimenzija leksikografskega produkta glede na metrično dimenzijo grafa $H$}
+\subsection{Metrična dimenzija leksikografskega produkta glede na metrično dimenzijo grafa $H$} \label{ss:mdim_komp_prod}
+
 %TA PODNASLOV NI NAJBOLJ POSREČEN...
 Obravnavamo leksikografski produkt $G[H]$, kjer je $G$ povezan graf in $H$ pojuben 
 graf. Naj bosta $a \in V(G)$ in $b \in H$ poljubni vozlišči. Za potrebe tega 
@@ -634,7 +631,7 @@ TODO - leme
 %     \begin{enumerate}
 %         \item $S \setminus \{ v \} = \emptyset$ 
         
-%         Trditev \ref{trditev_2.10.} nam pove $Q = P_1 = K_1.$ Sledi $Q + K_1 = P_2.$ 
+%         Trditev \ref{trd:mdim_polni_pot} nam pove $Q = P_1 = K_1.$ Sledi $Q + K_1 = P_2.$ 
 %         Hitro lahko preverimo, da je rešljiva baza grafa $P_2$ množica, ki vsebuje enega 
 %         od robnih vozlišč. Torej bi lahko namesto $v$, vzeli vozlišče, ki sestavlja graf 
 %         $Q$ in tako dobimo rešljivo bazo $S \subseteq V(Q).$
@@ -656,10 +653,10 @@ TODO - leme
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsubsection{H je nepovezan graf}
+\subsubsection{H je nepovezan graf} \label{sss:nepovezan}
 
 
-\begin{izrek} \label{izrek_4.1.}
+\begin{izrek} \label{izrek:omejitve_mdim_komp}
     Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf reda $m \geq 2$, s $k \geq 1$ 
     komponentami $H_1, H_2, ... , H_k$. Potem velja:
     $$
@@ -672,9 +669,9 @@ TODO - leme
     
     
     V dokazu naslednjega izreka bomo konstruirali grafe, katerih metrična dimenzija je enaka
-    spodnji ali zgornji meji iz izreka \ref{izrek_4.1.} ter dvema vmesnima vrednostima.
+    spodnji ali zgornji meji iz izreka \ref{izrek:omejitve_mdim_komp} ter dvema vmesnima vrednostima.
     
-    \begin{izrek}
+    \begin{izrek} \label{izrek:primeri_mdim_komp}
     Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
     reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, ... , H_k$, da velja:
     \begin{enumerate}
@@ -690,12 +687,12 @@ TODO - leme
     \begin{dokaz}
         \begin{enumerate}
             \item Naj bo $G = P_n$, $n\geq 4$ in $H$ graf s $k\geq 2$ vozlišči, brez povezav. 
-            Zaradi izreka \ref{izrek_4.1.}, je dovolj pokazati 
+            Zaradi izreka \ref{izrek:omejitve_mdim_komp}, je dovolj pokazati 
             $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
             \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, ..., p_n\}$, kjer so $\forall 1 \leq i < n : \; 
             p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, ..., v_k\}.$ Definirajmo množico 
             $W = V(G[H]) \setminus G(v_k).$ Velja $|W| = n \cdot (k-1).$ 
-            Pokažimo, da je $W$ rešljiva množica. Opomba \ref{opomba_2.11.} nam pove, da je dovolj preveriti
+            Pokažimo, da je $W$ rešljiva množica. Opomba \ref{op:zadostno_preverjanje} nam pove, da je dovolj preveriti
             vozlišča iz množice $G(v_k) = \{ (p_1, v_k), (p_2, v_k), ..., (p_n, v_k)\}$. Če se spomnimo formule
             \ref{eq:razdalja_produkta}, vidimo, da velja:
             \begin{itemize}
@@ -730,10 +727,10 @@ TODO - leme
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsubsection{H je povezan graf}
+\subsubsection{H je povezan graf} \label{sss:povzean}
 
 
-\begin{izrek} \label{izrek_4.3.}
+\begin{izrek} \label{izrek:primeri_mdim_komp_povezan}
     Naj bo $G$ povezan graf reda $n \geq 2$ in $H$ povezan graf reda $m \geq 2$. Potem velja:
     $$
     n \cdot \beta(H)  
@@ -742,7 +739,7 @@ TODO - leme
     $$
 \end{izrek}
 
-\begin{izrek}
+\begin{izrek} \label{izrek:omejitve_mdim_komp_povezan}
     Obstajata taka grafa povezana $G$ in $H$, reda vsaj $2$, da velja:
     \begin{enumerate}
         \item $\beta(G[H]) = n \cdot \beta(H)$
